ViTables ChangeLog
==================
** Dec 15, 2008**
	Fixed some bugs regarding portability between different platforms.

** Dec 13, 2008**
	Project clean-up and final changes.

** Dec 12, 2008**
	The preferences package has been refactored.

** Dec 11, 2008**
	Zooming cells with string content has been fixed.

	Fixed an annoying bug introduced in changeset 184e748db458.

** Dec 10, 2008**
	A context menu has been added to the workspace.

	The User's Manual has been updated.

	The documentation browser has been updated.

	The module in charge of application configuration has been updated.

	Fixed a small bug in the Properties dialog.

	Changed the trigger for in-place renaming of nodes in the tree of databases
	pane.

	The Properties dialog has been debugged and improved.

** Dec 09, 2008**
	ANNOUNCE.txt and setup.py have been updated.

	Fixed a bug in scripts/vitables.

	Fixed a small l10n problem.

** Dec 08, 2008**
	Fixed a small bug in insertion of nodes in the tree of databases pane.

** Dec 05, 2008**
	Fixed a subtle bug in the datasets access process.

	A small bug has been fixed.

	File Save As... operation has been debugged.

	Enhanced the render of datasets with just one row/column.

	Fixed a small bug in the synchronisation of the workspace with the tree of
	databases pane.

** Dec 04, 2008**
	A minor problem found in tables queries have been fixed.

	The content of just created filtered tables is now automatically displayed.

	Fixed a bug in the access to datasets with two or more dimensions.

	Nodes copying has been updated: leaves whose dataset is not readable are not
	copied

	Deletion of views tied to overwritten nodes has been implemented.

	The status bar is properly updated now when a node is renamed in the Tree of databases pane.

** Dec 03, 2008**
	The 'Recover last session' feature is fully implemented now.

	Fixed a small bug in the splash screen.

	Added a label in the status bar for displaying info about the node currently